mobile version spacing fixes

--- a/styles.scss
+++ b/styles.scss
@@ -108,7 +108,7 @@
 
   &__phone {
     // max-width: 75%;
-    max-width: 50%;
+    max-width: 60%;
     justify-self: center;
     margin-bottom: $margin-s;
     margin-inline: auto;
@@ -166,8 +166,11 @@
   font-weight: 100;
   border-style: none;
   margin-left: 16px;
-  width: 14rem;
-  height: 6rem;
+  // width: 14rem;
+  // height: 6rem;
+
+  width: 12rem;
+  height: 4rem;
 
   background-image: linear-gradient(to bottom, #000, #000d30);
   margin: 0 auto;
@@ -183,7 +186,7 @@
   // }
 
   &__link {
-    font-size: $golden-25;
+    font-size: $golden-16;
     font-weight: 100;
     color: white;
     text-decoration: none;
@@ -201,10 +204,12 @@
   background-color: transparent;
   z-index: -1;
 
-  width: 14rem;
-  height: 6rem;
-  top: 0.8rem;
-  right: 0.8rem;
+  // width: 14rem;
+  // height: 6rem;
+  width: 12rem;
+  height: 4rem;
+  top: 0.4rem;
+  right: 0.4rem;
   border: solid 1px #979797;
 
   @media only screen and (min-width: 1300px) {
@@ -301,7 +306,7 @@
   }
   &__img-right {
     max-width: 100%;
-    z-index: 20;
+    z-index: 10;
     display: none;
 
     @media only screen and (min-width: 900px) {
@@ -310,8 +315,10 @@
 
     &--mobile {
       max-width: 69.5%;
+      z-index: 100;
       @media only screen and (min-width: 900px) {
         display: none;
+        
       }
     }
   }
@@ -378,14 +385,14 @@
   justify-self: center;
   align-self: center;
   padding-top: 14rem;
-  padding-bottom: 14rem;
+  padding-bottom: 3.2rem;
 
   @media only screen and (min-width: 600px) {
     max-width: 60%;
   }
 
   &__heading {
-    margin-bottom: 3.6rem;
+    margin-bottom: 6.4rem;
   }
 
   &__label {
@@ -395,7 +402,7 @@
 
   &__input::placeholder {
     color: white;
-    font-size: $golden-25;
+    font-size: $golden-16;
     font-weight: 100;
     font-family: $font-primary;
   }
@@ -408,7 +415,7 @@
     background-color: $red-primary;
     margin-bottom: 3.6rem;
     color: white;
-    font-size: $golden-25;
+    font-size: $golden-16;
     font-weight: 100;
     font-family: $font-primary;
   }
@@ -421,14 +428,16 @@
     font-weight: 100;
     border-style: none;
     margin-top: 42px;
-    width: 20rem;
-    height: 6rem;
+    // width: 20rem;
+    // height: 6rem;
+    width: 12rem; 
+    height: 4rem;
     background-color: $red-primary;
     position: relative;
     border: solid 2px #000;
     background-color: #c81818;
     font-size: $font-primary;
-    font-size: $golden-25;
+    font-size: $golden-16;
     color: white;
     font-weight: 100;
     margin-inline: auto;
@@ -441,8 +450,8 @@
     background-color: #0f161a;
     z-index: -1;
 
-    width: 20rem;
-    height: 6rem;
+    width: 12rem;
+    height: 4rem;
     top: 2px;
     right: 2px;
     border: none;
