--- a/what.scss
+++ b/what.scss
@@ -271,25 +271,30 @@
   margin-inline: auto;
   grid: 2/3;
   grid-template-columns: 1fr 1fr 1fr;
-  gap: 20px;
+  gap: 10px;
   width: auto;
   height: auto;
   position: relative;
   margin-bottom: $margin-s;
   // bottom: 88px;
-  margin-top: 30%;
+  
 
   @media only screen and (min-width: 900px) {
     grid-row: 1/3;
     grid-column: 2/3;
     align-self: start;
     display: none;
+    gap: 20;
   }
 
   &__column {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 10px;
+
+    @media only screen and (min-wdith: 900px){
+      gap: 20px;
+    }
   }
   &__img {
     max-width: 100%;
